apps/metube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: transmission
spec:
  type: ClusterIP
  selector:
    app: metube
  ports:
    - name: http
      port: 8081
      targetPort: 8081
