apps/metube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metube
  namespace: transmission
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-authentik-forward-auth@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: yt.def4alt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metube
                port:
                  number: 8081
  tls:
    - secretName: metube-tls
      hosts:
        - yt.def4alt.com
